# CBS-Golang

./: README.md
GO-Editor/: README.md  metaborg.yaml  pom.xml
GO-Editor/editor/: Main.esv  Syntax.esv
GO-Editor/syntax/: GO.sdf3  Stratego-GO.sdf
GO-Editor/trans/: Stratego-GO.tbl  generate.str  go.str  outline.str  pp.str
GO-Tests/: .project  GO-runfct-random.sh  count-lines.py  run-config.py  run-tests.sh  test.fct
GO-Tests/blocks/: empty-block.fct  filled-block.fct
GO-Tests/booleans/: if-true.fct
GO-Tests/channels/: channel-distribution.fct  channel-distribution.go  channel-receive-minimal.fct  channel-receive-multiple.fct  channel-receive-multiple.go  channel-receive-succes.fct  channel-receive-succes.go  channel-receive-threaded-minimal.fct  channel-receive-threaded.fct  channel-receive-threaded.go  channel-send-failure.fct  channel-send-failure.go  channel-send-minimal.fct  channel-send-succes.fct  channel-send.fct  channel-send.go  channel-sum.fct  make-channel-n.fct  make-channel-n.go  make-channel.fct  make-channel.go
GO-Tests/expressions/: precedence.fct  precedence.go
GO-Tests/for-loops/: counting.fct  counting.go
GO-cbs/: .project  Unstable-Funcons-beta
GO-runfct/: CHANGELOG.md  GO-runfct.cabal  generate.sh
GO-runfct/app/: Main.hs
GO-runfct/app/Funcons/Golang/: Library.hs
GO-runfct/app/Funcons/Golang/GO2Types/: GO2Types.hs
GO-runfct/app/Funcons/Golang/GOBFuncons/: GOBFuncons.hs
GO-runfct/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
(+104 files in other folders)
