cabal-version:      2.4
name:               GO-runfct
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Timo Post
maintainer:         timo.post@student.uva.nl

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable GO-runfct
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Funcons.Golang.Library
                    , Funcons.Golang.GO2Types.GO2Types
                    , Funcons.Golang.GOBFuncons.GOBFuncons

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , funcons-tools ^>=0.2.0.15
                    , funcons-values ^>=0.1.0.9
    hs-source-dirs:   app
    default-language: Haskell2010
